# sanic-demo

./: .gitignore  ctp-web.py  pyproject.toml  pytest.ini
comm/: __init__.py  logger.py
comm/biz/: __init__.py  biz_model.py
comm/utils/: __init__.py  utils.py
tests/: __init__.py  async_test_case.py  base_test_case.py
web/app/comm/: __init__.py  sanic_apscheduler.py  sanic_login.py  sanic_scheduler.py  sanic_session.py  sanic_sqlalchemy.py
web/app/ext/: __init__.py  sanic_apscheduler.py  sanic_login.py  sanic_session.py  sanic_sqlalchemy.py  sanic_static.py  sanic_template.py
web/app/utils/: __init__.py  utils_app.py  utils_html.py  utils_http.py
web/app_wss/: main.py
web/app_wss/app/biz/: biz_model.py
web/app_wss/app/bp/: tester.py
web/app_wss/app/job/: test_job.py
web/app_wss/conf/: __init__.py  app_conf.json  app_conf.py  job_conf.py  login_conf.py  session_conf.py  user_conf.py
web/app_wss/static/miaowa/js/: hello.js
web/app_wss/templates/: foo.html  index.html  join.html  list.html  login.html  sse.html
web/app_wss/tests/: __init__.py
web/app_wss/tests/bp/: test_tester.py
