[project]
name = "sanic-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "kylindai",email = "kylin@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "sanic (>=24.12.0,<25.0.0)",
    "sanic-ext (>=24.12.0,<25.0.0)",
    "sanic-session (>=0.8.0,<0.9.0)",
    "sanic-cookiesession (>=0.3.1,<0.4.0)",
    "sanic-auth (>=0.3.0,<0.4.0)",
    "sanic-jwt (>=1.8.0,<2.0.0)",
    "sanic-testing (>=24.6.0,<25.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "pytest-cov (>=6.1.0,<7.0.0)",
    "pytest-ordering (>=0.6,<0.7)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
